--- a/index.html
+++ b/index.html
@@ -114,7 +114,10 @@
   </style>
 </head>
 <body>
-  <img src="https://drive.google.com/thumbnail?id=1TYnVllARnPodXcyIz_jt-h50jiEQ_eI2&sz=w300" alt="Logo Sekolah" class="logo" />
+  <img src="https://smkn1-sawahlunto.sch.id/lulus/KOP.png" 
+  alt="Kop Sekolah"
+  style="width: 100%; max-width: 800px; margin-bottom: 20px;">
+  
   <h1>PENGUMUMAN KELULUSAN</h1>
   <h2>SMK NEGERI 1 SAWAHLUNTO TAHUN PELAJARAN 2024/2025</h2>
 
@@ -182,7 +185,7 @@
       }
 
       try {
-        const response = await fetch(`https://script.google.com/macros/s/AKfycbziUGzsUJrPs0KjtVkfDDlbvQRVxCxGUBmhEdA3t3OCYt7kIT3netBAKINyPfXMtpM/exec?nisn=${nisn}`);
+        const response = await fetch(`https://script.google.com/macros/s/AKfycbzdw8pdJPQn5_evDSGe8yVOqexkVV1a5PLCzV_RyfAWxzSN0KRcoLgloc7mxAwxrT8/exec?nisn=${nisn}`);
         const data = await response.json();
 
         if (data.error) {
@@ -199,7 +202,7 @@
   <p><strong>Status:</strong> <span class='${statusClass}'>${data.keterangan}</span></p>
   ${data.keterangan.toLowerCase() === 'lulus' ? `
   <div style="text-align: justify; margin-top: 30px; background-color: #e3f2fd; padding: 15px; border-radius: 8px;">
-    <p><strong>📄 Catatan Penting:</strong></p>
+    <p><strong>ðŸ“„ Catatan Penting:</strong></p>
     <ol>
       <li>Surat Keterangan Kelulusan atau SKL diambil oleh orang tua pada hari selasa, 3 Juni 2025 selama jam dinas ke Wali Kelas masing-masing.</li>
       <li>Harap memakai pakaian muslim yang rapi dan sopan.</li>
